--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -143,7 +143,21 @@
   }
 }
 
-
+/* iPads (вертикальная и горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .container--crypto {
+    width: 95%;
+  }
+  
+  .crypto {
+    &::after {
+      display: none;
+    }
+    & h1 {
+      margin-top: 50px;
+    }
+  }
+}
 
 
 
