--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -172,7 +172,27 @@
 
 /* iPads (вертикальная и горизонтальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-/* стили */
+  .container {
+    width: 95%;
+  }
+  
+  body {
+    color: red;
+  }
+  
+  .page-header__nav-list {
+    width: 100%;
+    justify-content: center;
+  }
+  
+  .page-header__item {
+    margin-left: 10px;
+  }
+  
+  .page-header__item a {
+    padding: 5px 10px;
+    font-size: 16px;
+  }
 }
 
 /* iPads (горизонтальная) ----------- */
