--- a/assets/templates/crypto-b/sass/blocks/trade.scss
+++ b/assets/templates/crypto-b/sass/blocks/trade.scss
@@ -79,3 +79,26 @@
     text-align: center;
   }
 }
+
+/* iPads (вертикальная и горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .trade {
+    min-height: 220px;
+  }
+  
+  .trade .container,
+  .trade__flex {
+    min-height: 220px;
+  }
+  
+  .trade__left-column {
+    align-self: center;
+    margin-top: 0;
+  }
+  
+  .trade__right-column {
+    align-self: center;
+    margin-top: 0;
+    font-size: 20px;
+  }
+}
