--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -87,6 +87,10 @@ form p {
 // Media
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {  
+  .page-header {
+  
+  }
+  
   .page-header__form {
     justify-content: center;
     margin-top: 30px;
