--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -138,6 +138,17 @@
   }
 }
 
+/* iPads (вертикальная и горизонтальная) ----------- */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .tading {
+    min-height: 0;
+  }
+  
+  .trading__coin {
+    margin-bottom: 50px;
+  }
+}
+
 
 
 
