--- a/assets/templates/crypto-b/sass/blocks/news.scss
+++ b/assets/templates/crypto-b/sass/blocks/news.scss
@@ -117,6 +117,12 @@
   }
 }
 
+/* Настольные компьютеры и ноутбуки ----------- */
+@media only screen and (min-width: 1224px) {
+  .news__flex {
+    padding-bottom: 70px;
+  }
+}
 
 
 
