--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -218,8 +218,8 @@
 
 /* Большие экраны ----------- */
 @media only screen and (min-width: 1824px) {
-  body {
-    color: green;
+  .container {
+    width: 70%;
   }
 }
 
