--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#">Logins</a></li>
+                <li class="page-header__item"><a href="#">Login</a></li>
                 <li class="page-header__item"><a href="#">Contacts</a></li>
                 <li class="page-header__item"><a href="#">Live Chat</a></li>
               </ul>
