--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -14,6 +14,7 @@
     position: absolute;
     background: url("../img/phone.png") no-repeat;
     background-size: cover;
+    z-index: 2;
   }
   
   & h1 {
