--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -1,7 +1,6 @@
 .trading {
   min-height: 600px;
-  background: url("../img/trading-bg.png") no-repeat top;
-  background-size: cover;
+  background: #00aeef;
   
   & h2 {
     margin-top: 60px;
@@ -32,9 +31,32 @@
 }
 
 .trading__coin {
+  position: relative;
+  min-height: 300px;
   margin-top: 120px;
-  height: 150px;
-  background: url("../img/coin.png") no-repeat top;
+  background: url("../img/coin.png") no-repeat center;
+  background-size: cover; 
+  z-index: 1;
+}
+
+.trading__coin::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -100px;
+  width: 50%;
+  height: 100px;
+  background: linear-gradient(to bottom right,transparent 50%, $w 50.7%);
+}
+
+.trading__coin::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -100px;
+  width: 50%;
+  height: 100px;
+  background: linear-gradient(to bottom left,transparent 50%, $w 50.7%);
 }
 
 // Media
@@ -50,6 +72,7 @@
     }
     
     & p {
+      text-align: center;
       width: 100%;
       font-size: 20px;
     }
@@ -57,7 +80,7 @@
   
   .trading__flex {
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
   }
   
   .container--trading {
@@ -69,7 +92,7 @@
     height: 100px;
     margin: 0 auto;
     margin-top: 30px;
-    background: url("../img/coin-s.png") no-repeat center;
+    background: $w url("../img/coin-s.png") no-repeat center;
     background-size: contain;
   }
 }
@@ -165,8 +188,7 @@
     display: block;
   }
   
-  .trading {
-    background: url("../img/trading-bg.png") no-repeat top;
-    background-size: cover;
+  .trading__coin {
+    background: $w url("../img/coin.png") no-repeat center;
   }
 }
