--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -63,7 +63,7 @@
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
   .trading {
-    min-height: 520px;
+    min-height: 440px;
     background: #00aeef;
     
     & h2 {
@@ -88,12 +88,23 @@
   }
   
   .trading__coin {
-    width: 95%;
-    height: 100px;
+    min-height: 100px;
     margin: 0 auto;
     margin-top: 30px;
-    background: $w url("../img/coin-s.png") no-repeat center;
+    background: $w url("../img/coin.png") no-repeat center;
     background-size: contain;
+  }
+  
+  .trading__coin::before {
+    top: -50px;
+    height: 50px;
+    background: linear-gradient(to bottom left,transparent 50%, $w 50.7%);
+  }
+  
+  .trading__coin::after {
+    top: -50px;
+    height: 50px;
+    background: linear-gradient(to bottom right,transparent 50%, $w 50.7%);
   }
 }
 
@@ -103,19 +114,20 @@
 /* Smartphones (вертикальная) ----------- */
 @media only screen and (max-width: 320px) {
   .trading {
-    min-height: 520px;
+    min-height: 400px;
     background: #00aeef;
     
     & h2 {
       margin-top: 30px;
       margin-bottom: 0;
       font-size: 30px;
+      text-align: center;
     }
     
     & p {
       width: 100%;
       font-size: 20px;
-      text-align: left;
+      text-align: center;
     }
   }
   
@@ -129,12 +141,25 @@
   }
   
   .trading__coin {
-    width: 95%;
-    height: 100px;
+    min-height: 100px;
     margin: 0 auto;
     margin-top: 30px;
-    background: url("../img/coin-s.png") no-repeat center;
+    background: $w url("../img/coin.png") no-repeat center;
     background-size: contain;
+  }
+  
+  .trading__coin::before {
+    right: 0;
+    top: -25px;
+    height: 25px;
+    background: linear-gradient(to bottom left,transparent 50%, $w 50.7%);
+  }
+  
+  .trading__coin::after {
+    right: 0;
+    top: -25px;
+    height: 25px;
+    background: linear-gradient(to bottom right,transparent 50%, $w 50.7%);
   }
 }
 
