--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -158,7 +158,13 @@
       margin-top: 50px;
     }
     
+    & p {
+      align-self: center;
+      text-align: center;
+    }
+    
     & a {
+      align-self: center;
       margin-bottom: 70px;
     }
   }
