--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -145,7 +145,21 @@
         <p>When trading Cryptocurrencies with BDSwiss you are increase or decrease in value against another currencyCryptocurrencies with BDSwiss you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
       </div>
     </div>
-    <div class="trading__coin"></div>
+    <div class="trading__coin">
+      <div class="container">
+        <div class="coin__flex">
+          <div class="coin__c-1"></div>
+          <div class="coin__c-2"></div>
+          <div class="coin__c-3"></div>
+          <div class="coin__c-4"></div>
+          <div class="coin__c-5"></div>
+          <div class="coin__c-6"></div>
+          <div class="coin__c-7"></div>
+          <div class="coin__c-8"></div>
+          <div class="coin__c-9"></div>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="coin"></section>
   <footer class="page-footer">
