--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -34,7 +34,7 @@
   position: relative;
   min-height: 300px;
   margin-top: 120px;
-  background: url("../img/coin.png") no-repeat center;
+  background: $w;
   background-size: cover; 
   z-index: 1;
 }
@@ -59,6 +59,107 @@
   background: linear-gradient(to bottom left,transparent 50%, $w 50.7%);
 }
 
+.coin__flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-top: 25px;
+}
+
+.coin__c-1,
+.coin__c-2,
+.coin__c-3,
+.coin__c-4,
+.coin__c-5,
+.coin__c-6,
+.coin__c-7,
+.coin__c-8,
+.coin__c-9, {
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.coin__c-1:hover,
+.coin__c-2:hover,
+.coin__c-3:hover,
+.coin__c-4:hover,
+.coin__c-5:hover,
+.coin__c-6:hover,
+.coin__c-7:hover,
+.coin__c-8:hover,
+.coin__c-9:hover, {
+  // transform: scale(1.2, 1.2);
+  animation-name: coin;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-duration: 1.5s;
+}
+
+@keyframes coin {
+  0% {
+    transform: rotate3d(0, 1, 0, 0deg);
+  }
+  50% {
+    transform: rotate3d(0, 1, 0, 180deg);
+  }
+  100% {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
+}
+
+.coin__c-1 {
+  width: 58px;
+  height: 64px;
+  background: url("../img/c-1.png");
+}
+
+.coin__c-2 {
+  width: 83px;
+  height: 83px;
+  background: url("../img/c-2.png");
+}
+
+.coin__c-3 {
+  width: 89px;
+  height: 89px;
+  background: url("../img/c-3.png");
+}
+
+.coin__c-4 {
+  width: 62px;
+  height: 99px;
+  background: url("../img/c-4.png");
+}
+
+.coin__c-5 {
+  width: 123px;
+  height: 123px;
+  background: url("../img/c-5.png");
+}
+
+.coin__c-6 {
+  width: 73px;
+  height: 79px;
+  background: url("../img/c-6.png");
+}
+
+.coin__c-7 {
+  width: 84px;
+  height: 83px;
+  background: url("../img/c-7.png");
+}
+
+.coin__c-8 {
+  width: 77px;
+  height: 80px;
+  background: url("../img/c-8.png");
+}
+
+.coin__c-9 {
+  width: 57px;
+  height: 57px;
+  background: url("../img/c-9.png");
+}
 // Media
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
@@ -92,7 +193,7 @@
     min-height: 100px;
     margin: 0 auto;
     margin-top: 40px;
-    background: $w url("../img/coin.png") no-repeat center;
+    // background: $w url("../img/coin.png") no-repeat center;
     background-size: contain;
   }
   
@@ -145,7 +246,7 @@
     min-height: 100px;
     margin: 0 auto;
     margin-top: 30px;
-    background: $w url("../img/coin.png") no-repeat center;
+    // background: $w url("../img/coin.png") no-repeat center;
     background-size: contain;
   }
   
@@ -185,7 +286,7 @@
     min-height: 150px;
     width: 100%;
     margin-top: 80px;
-    background: $w url("../img/coin.png") no-repeat bottom;
+    // background: $w url("../img/coin.png") no-repeat bottom;
     background-size: contain;
   }
   
@@ -225,7 +326,6 @@
   .trading__coin {
     min-height: 200px;
     margin-top: 100px;
-    background: $w url("../img/coin.png") no-repeat top;
   }
   
   .trading__coin::before {
@@ -246,9 +346,5 @@
 @media only screen and (min-width: 1824px) {
   .crypto::after {
     display: block;
-  }
-  
-  .trading__coin {
-    background: $w url("../img/coin.png") no-repeat center;
   }
 }
